--- a/src/main/webapp/test_page.html
+++ b/src/main/webapp/test_page.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="jquery-3.3.1.min.js"></script>
-    <script src="ClickMoniter.js"></script>
+    <script src="WSK_Common.js"></script>
+    <script src="WSK_ClickMoniter.js"></script>
+    <script src="WSK_EventMoniter.js"></script>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -12,7 +13,20 @@
 <div id="h">点我</div>
 <div id="hhh">点我</div>
 <button>点我</button>
+<button onclick="recordEvent('产品点击','产品aaa')">点我产品</button>
 <button disabled>点我</button>
 </body>
-<script src="test_page.js"></script>
+<script src="jquery-3.3.1.min.js"></script>
+<script>
+    window.onload=function () {
+        document.getElementById("hhh").addEventListener("click",function () {
+            alert("执行了通过addEventListener加的点击函数");
+            alert("ClickEventListenersDOMList第一个元素的outerHTML是\n"
+                +Element.ClickEventListenersDOMList[0].outerHTML);
+        });
+        $('#h').click(function () {
+            alert("执行了通过jquery的click加的点击函数")
+        });
+    };
+</script>
 </html>
