--- a/src/main/webapp/test_page.html
+++ b/src/main/webapp/test_page.html
@@ -7,14 +7,25 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
 <body>
-<a href="#">点我</a>
-<div onclick="alert('执行了通过onclick加的点击函数')">点我</div>
-<div id="h">点我</div>
-<div id="hhh">点我</div>
-<button>点我</button>
-<button onclick="recordEvent('产品点击','产品aaa')">点我产品</button>
-<button disabled>点我</button>
+<form action="postdata" method="post">
+    <a href="#">点我</a>
+    <div onclick="alert('执行了通过onclick加的点击函数')">点我</div>
+    <div id="h">点我</div>
+    <div id="hhh">点我</div>
+    <button>点我</button>
+    <button onclick="recordEvent('产品点击','产品aaa')">点我产品</button>
+    <button disabled>点我</button>
+</form>
+
+
+<form action="test_page1.html" method="GET">
+    网址名：<input type="text" name="name">
+    <br />
+    网址：<input type="text" name="url" />
+    <input type="submit" value="提交" />
+</form>
 </body>
 <script src="jquery-3.3.1.min.js"></script>
 <script>
@@ -24,9 +35,22 @@
             alert("ClickEventListenersDOMList第一个元素的outerHTML是\n"
                 +Element.ClickEventListenersDOMList[0].outerHTML);
         });
+
+    };
+</script>
+<script type="text/javascript">
+    $(function(){
         $('#h').click(function () {
             alert("执行了通过jquery的click加的点击函数")
+            var value ="执行了通过jquery的click加的点击函数";
+            // 使用ajax发送请求
+            $.ajax({
+                url: "postdata", // 要访问的地址，这里访问的是servlet映射地址
+                cache: false,  // 是否缓存
+                data: "name="+value, // 相当于地址栏后面的参数
+            })
         });
-    };
+
+    })
 </script>
 </html>
