--- a/src/main/webapp/test_page.html
+++ b/src/main/webapp/test_page.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <a href="#">点我</a>
+    <a href="postdata?baseURI=1">点我</a>
     <div onclick="alert('执行了通过onclick加的点击函数')">点我</div>
     <div id="h">点我</div>
     <div id="hhh">点我</div>
