Some of the module connected to database.

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="web-3.css">
+    <link rel="stylesheet" type="text/css" href="css/web-3.css">
     <style>
         .current a {
             color: #000;
@@ -20,8 +20,10 @@
     <li class="current" data-id="center"><a href="#">用户分析</a></li>
     <li data-id="traffic"><a href="#">流量分析</a></li>
     <li data-id="account"><a href="#">终端分析</a></li>
+    <!--
     <li><a href="#">事件分析</a></li>
     <li><a href="#">报表统计</a></li>
+    -->
 </ul>
 <div id="content">
 </div>
@@ -64,5 +66,4 @@
         loadInner(sId);
     });
 </script>
-
 </html>
