--- a/src/main/webapp/user_account.html
+++ b/src/main/webapp/user_account.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/echarts.min.js"></script>
@@ -37,7 +37,7 @@
 <body>
 <div class="main">
     <div class="heading1">
-        用户分析2
+        终端分析
     </div>
     <div style="width: 80px;height: 30px;float:right;margin-right: 100px;">
         <img class="img1" src="resource/export-1.png" alt="" style="width: 100%;height: 100%;CURSOR: pointer" onclick="tableToExcel()"></div>
