--- a/src/main/webapp/user_center.html
+++ b/src/main/webapp/user_center.html
@@ -40,9 +40,9 @@
 
     <div class="section2">
         <div class="heading2">
-            总用户：
+            总用户数量：
         </div>
-        <div style="width: 100px;height: 100px;font-size: 50px;font-family: Microsoft YaHei UI;color: #47bde1;margin-left: 30px;margin-top: 25px">
+        <div style="width: 100px;height: 100px;font-size: 50px;font-family: Microsoft YaHei UI;color: #47bde1;margin-left: 30px;margin-top: 25px" id="total">
             2333
         </div>
     </div>
@@ -56,6 +56,9 @@
 </div>
 </body>
 <script>
+    document.getElementById("total").innerHTML=data['总用户数量'];
+</script>
+<script>
     // 获取到这个DOM节点，然后初始化
 
     var myChart = echarts.init(document.getElementById("box"));
@@ -68,7 +71,7 @@
             trigger: 'axis'
         },
         legend: {
-            data: ['充值', '消费']
+            data: ['时间', '注册量']
         },
 
         calculable: true,
@@ -86,17 +89,7 @@
             },
             type: 'category',
             boundaryGap: false,
-            data: function () {
-                var list = [];
-                for (var i = 10; i < 21; i++) {
-                    if (i <= 12) {
-                        list.push('2016-' + i + '-01');
-                    } else {
-                        list.push('2017-' + (i - 12) + '-01');
-                    }
-                }
-                return list;
-            }()
+            data: data["日新增用户数量"]['时间']
         }],
         yAxis: [{
 
@@ -113,7 +106,7 @@
             symbol: 'none',
             smooth: 0.3,
             color: ['#66AEDE'],
-            data: [800, 300, 500, 800, 300, 600, 500, 600, 700, 800, 700]
+            data: data["日新增用户数量"]['数量']
         }]
     };
 
