Little bug fix.

--- a/src/main/webapp/test_page.html
+++ b/src/main/webapp/test_page.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<a href="index.jsp">点我</a>
     <div onclick="alert('执行了通过onclick加的点击函数')">点我</div>
     <div id="h">点我</div>
     <div id="hhh">点我</div>
