--- a/src/main/webapp/user_center.html
+++ b/src/main/webapp/user_center.html
@@ -78,6 +78,7 @@
 
 
         xAxis: [{
+            inverse:true,
             axisLabel: false,
             axisLine: {
                 lineStyle: {
