--- a/src/main/webapp/user_traffic.html
+++ b/src/main/webapp/user_traffic.html
@@ -61,6 +61,7 @@
 
 
         xAxis: [{
+            inverse:true,
             axisLabel: false,
             axisLine: {
                 lineStyle: {
@@ -72,7 +73,6 @@
             data: data['小时访问量']['时间']
         }],
         yAxis: [{
-
             type: 'value',
             axisLine: {
                 lineStyle: {
