--- a/src/main/webapp/user_analysis.html
+++ b/src/main/webapp/user_analysis.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -32,37 +32,33 @@
         <img class="img1" src="resource/export-1.png" alt="" style="width: 100%;height: 100%;CURSOR: pointer"
              onclick="tableToExcel()"></div>
     <div class="section1">
-        <div class="heading2">
-            每日访问量：
-        </div>
-		<div>
-			<div style="float: right;margin-top: -30px;">
-            总用户数量：
-        </div>
-        <div style="width: 100px;height: 60px;font-size: 40px;font-family: Microsoft YaHei UI;color: #47bde1;margin-left: 523px;margin-top: 10px;"
-             id="total">
-            2333
-        </div>	
-		</div> 
-        <div id="User_line" style="width: 570px; height:380px;margin-left:50px;position: absolute;top: 90px;"></div>
+        <div id="User_line" style="width: 570px; height:380px; background-color: pink;margin: 38px;"></div>
     </div>
 
-   
+    <div class="section2">
+        <div class="heading2">
+            总用户数量：
+        </div>
+        <div style="width: 100px;height: 100px;font-size: 50px;font-family: Microsoft YaHei UI;color: #47bde1;margin-left: 30px;margin-top: 25px"
+             id="total">
+            2333
+        </div>
+    </div>
     <div class="section3">
         <!--饼图-->
-        <div id="NewUser_pie" style="width: 220px;height: 220px;top: 20px;left: 67px;"></div>
-        <div id="ActiveUser_pie" style="width: 220px;height: 220px;top: 20px;left: 67px;"></div>
+        <div id="NewUser_pie" style="width: 100%;height: 100%"></div>
+        <div id="ActiveUser_pie" style="width: 100%;height: 100%"></div>
     </div>
 
 </div>
 </body>
 <script>
-    document.getElementById("total").innerHTML = totalData['总用户量'][0];;
+    document.getElementById("total").innerHTML = 23333;
 </script>
 <script>
     (function () {
         var UserLineChart = echarts.init(document.getElementById("User_line"));
-        var UserLineChartOption = getUserBarOption(option_multibar, '月用户总量', '月新增用户数量', '月活跃用户量', ' ');
+        var UserLineChartOption = getUserBarOption(option_multibar, '月用户总量', '月新增用户数量', '月活跃用户量', '每月用户统计');
 
         UserLineChart.setOption(UserLineChartOption);
         var NewUserPieChart = echarts.init(document.getElementById("NewUser_pie"));
