--- a/src/main/webapp/user_traffic.html
+++ b/src/main/webapp/user_traffic.html
@@ -15,134 +15,65 @@
     <div style="width: 80px;height: 30px;float:right;margin-right: 100px;">
         <img class="img1" src="resource/export-1.png" alt="" style="width: 100%;height: 100%;CURSOR: pointer"
              onclick="tableToExcel()"></div>
-    <div class="section1">
-        <div class="heading2">
-            每小时流量
-        </div>
-        <div id="box" style="width: 570px; height:380px; background-color: pink;margin: 38px;"></div>
-    </div>
 
-    <div class="section2">
-        <div class="heading2">
-            网站总流量：
+    <div class="section1">
+		<div class="heading2">
+            每日访问量：
         </div>
-        <div style="width: 100px;height: 100px;font-size: 50px;font-family: Microsoft YaHei UI;color: #47bde1;margin-left: 30px;margin-top: 25px" id="total">
-            2333333
+		<div>
+			<div style="float: right;margin-top: -30px;">
+            总访问量：
         </div>
+        <div style="width: 100px;height: 60px;font-size: 40px;font-family: Microsoft YaHei UI;color: #47bde1;margin-left: 523px;margin-top: 10px;"
+             id="total">
+            2333
+        </div>	
+		</div> 
+        <div id="Access_lineChart" style="width: 570px; height:380px;margin: 38px;top: -28px"></div>
     </div>
-    <div class="section3">
-        <div class="heading2">
-            优势产品流量：
-        </div>
-        <div id="duibi" style="width: 300px; height:200px;margin-top: 50px;margin-left: 20px"></div>
+	
+	
+    <div class="section4">
+		 <div id="Access_Productbar" style="width: 240px; height:200px;margin-top: 20px;float: left"></div>
+        <div id="Access_Pagebar" style="width: 240px;height: 200px;float: left;margin-top: 20px;"></div>
+		   <div id="Access_Pagepie" style="width: 200px;height: 200px;float: left;margin-left: 20px;margin-top: 20px;"></div>
+        <div id="Access_Productpie" style="width: 200px;height: 200px;float: left;margin-left: 20px;margin-top: 20px;"></div>
+        
     </div>
 </div>
 </body>
 <script>
-    document.getElementById("total").innerHTML=data['总访问量'];
+    document.getElementById("total").innerHTML = totalData['总访问量'][0];
 </script>
 <script>
-    // 获取到这个DOM节点，然后初始化
+    (function () {
 
-    var myChart = echarts.init(document.getElementById("box"));
+        var lineChart = echarts.init(document.getElementById("Access_lineChart"));
+        lineChart.setOption(getSingleLineOption(option_line, "日访问量", " "));
 
-    // option 里面的内容基本涵盖你要画的图表的所有内容
-    var option = {
-        // 定义样式和数据
-        backgroundColor: '#FFF',
-        tooltip: {
-            trigger: 'axis'
-        },
-        legend: {
-            data: ['时间', '流量']
-        },
+        var PagepieChart = echarts.init(document.getElementById("Access_Pagepie"));
+        PagepieChart.setOption(getItemPieOption(option_pie, "日页面访问量", totalData["日访问量"][0][0], "每日页面访问量占比"));
 
-        calculable: true,
+        var PagebarChart = echarts.init(document.getElementById("Access_Pagebar"));
+        PagebarChart.setOption(getItemBarOption(option_bar, "日页面访问量", totalData["日访问量"][0][0], 10, "每日页面访问量排行"));
 
+        var ProductpieChart = echarts.init(document.getElementById("Access_Productpie"));
+        ProductpieChart.setOption(getItemPieOption(option_pie, "日产品访问量", totalData["日访问量"][0][0], "每日产品访问量占比"));
 
-        xAxis: [{
-            inverse:true,
-            axisLabel: false,
-            axisLine: {
-                lineStyle: {
-                    color: '#999999'
-                }
-            },
-            type: 'category',
-            boundaryGap: false,
-            data: data['小时访问量']['时间']
-        }],
-        yAxis: [{
-            type: 'value',
-            axisLine: {
-                lineStyle: {
-                    color: '#CECECE'
-                }
+        var ProductbarChart = echarts.init(document.getElementById("Access_Productbar"));
+        ProductbarChart.setOption(getItemBarOption(option_bar, "日产品访问量", totalData["日访问量"][0][0], 10, "每日产品访问量排行"));
+
+        lineChart.on('updateAxisPointer', function (event) {
+            var xAxisInfo = event.axesInfo[0];
+            if (xAxisInfo) {
+                var when = totalData["日访问量"][0][xAxisInfo.value];
+                PagepieChart.setOption(getItemPieOption(option_pie, "日页面访问量", when, "每日页面访问量占比"));
+                PagebarChart.setOption(getItemBarOption(option_bar, "日页面访问量", when, 10, "每日页面访问量排行"));
+                ProductpieChart.setOption(getItemPieOption(option_pie, "日产品访问量", when, "每日产品访问量占比"));
+                ProductbarChart.setOption(getItemBarOption(option_bar, "日产品访问量", when, 10, "每日产品访问量排行"));
             }
-        }],
-        series: [{
-            type: 'line',
-            symbol: 'none',
-            smooth: 0.3,
-            color: ['#66AEDE'],
-            data: data['小时访问量']['访问量']
-        }]
-    };
+        });
+    })();
 
-
-    // 一定不要忘了这个，具体是干啥的我忘了，官网是这样写的使用刚指定的配置项和数据显示图表。
-    myChart.setOption(option);
-</script>
-<script>
-    var myChart = echarts.init(document.getElementById('duibi'));
-
-    // 指定图表的配置项和数据
-    option = {
-        backgroundColor: "#ffffff",
-        color: ["#348dc7", "#cccccc"],
-        legend: {
-            data: ['浏览量'],
-            x: "50%",
-            padding: 10    // [5, 10, 15, 20]
-        },
-        grid: {
-            containLabel: true
-        },
-        xAxis: [{
-            type: 'value',
-            axisLine: {
-                lineStyle: {
-                    color: '#999999'
-                }
-            }
-        }],
-        yAxis: [{
-            type: 'category',
-            axisTick: {
-                show: false
-            },
-            axisLine: {
-                lineStyle: {
-                    color: '#999999'
-                }
-            },
-            data: ['商品C', '商品B', '商品A']
-        }],
-        series: [{
-            name: '浏览量',
-            type: 'bar',
-            stack: '总量',
-            label: {
-                normal: {
-                    show: true,
-                    position: 'right'
-                }
-            },
-            data: [202, 241, 274]
-        }]
-    };
-
-    // 使用刚指定的配置项和数据显示图表。
-    myChart.setOption(option);
 </script>
 </html>
