--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -21,7 +21,8 @@
     <li class="current" id="center"><a href="#">用户分析</a></li>
     <li id="traffic"><a href="#">流量分析</a></li>
     <li id="account"><a href="#">终端分析</a></li>
-    <li id="analysis"><a href="#">事件分析</a></li>
+    <li id="analysis"><a href="#">页面关系分析</a></li>
+	<li id="analysis1"><a href="#">消费分析</a></li>
     <!--
     <li><a href="#">事件分析</a></li>
     <li><a href="#">报表统计</a></li>
@@ -47,6 +48,10 @@
                 case "analysis":
                     pathn = "user_analysis.html";
                     i = 3;
+                    break;
+				case "analysis1":
+                    pathn = "user_analysis1.html";
+                    i = 4;
                     break;
                 default:
                     pathn = "user_center.html";
