--- a/src/main/webapp/user_account.html
+++ b/src/main/webapp/user_account.html
@@ -23,7 +23,6 @@
         }
         .section5{
             width: 550px;
-            height: 550px;
             border-radius: 10px;
             background-color: #ffffff;
             position:relative;
@@ -46,12 +45,10 @@
             地图：
         </div>
         <!-- 地图 -->
-        <div id="container" style="height: 500px;width:650px;background:white;"></div>
+        <div id="container" style="height: 500px;width:650px;background:white;margin-top: 10px;"></div>
     </div>
     <div class="section5">
-        <div class="heading2">
-            总用户：
-        </div>
+
         <div>
             <div class="left-b" style="background: #FFFFFF">
                 <!-- 环状图1，2 -->
